--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -22,6 +22,9 @@ input{
 textarea{
     margin: 2px auto;
 }
+.readable {
+  background-color: silver;
+}
 .container-fluid {
   height: 90vh;
   padding-left: 0px;
