--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>New User</title>
+    <%- include('../partials/_header');%>
     <%- include('../partials/_navbar');%>
   </head>
   <body>
