Added image scaling
added image scaling, fixed random apostrophes

--- a/views/board/index.ejs
+++ b/views/board/index.ejs
@@ -64,6 +64,12 @@
         <div class="col-sm-4"></div>
         <div class="dol-sm-4"><button id="ChangeSize">Change Grid Size</button>           Size:<input type="text" placeholder="25" id="Size"></input></div>
       </div>
+    </br></br>
+      <div class="row">
+        <div class="col-sm-4"><button id="ChangeScale">Change Image Scale</button></div>
+        <div class="col-sm-4">Scale:<input type="text" id="ImageScale"></input></div>
+        <div class="col-sm-4"></div>
+      </div>
     </br></br></br>
     <script src='/scripts/board.js'></script>
   </body>
